fixme：修复宠物列表中的宠物详情卡片的数值展示 BUG